--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,15 @@
-
 <nav class="uk-navbar uk-navbar-container uk-margin uk-hidden@m">
-    <div class="uk-navbar-left">
-        <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
-    </div>
+  <div class="uk-navbar-left">
+    <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
+  </div>
+  <div class="uk-navbar-center">
+    <a class="uk-navbar-item uk-logo" href="#"><img src="../../assets/img/logo.png
+          " id="logo"></a>
+  </div>
 </nav>
 
-<nav class="uk-navbar-container uk-margin uk-visible@m" uk-navbar>
+<nav class="uk-navbar-container uk-margin-bottom uk-visible@m" uk-navbar>
   <div class="uk-navbar-center">
-
     <div class="uk-navbar-center-left">
       <div>
         <ul class="uk-navbar-nav">
@@ -16,7 +18,6 @@
             <a href="#">Atualidades</a>
             <div class="uk-navbar-dropdown">
               <ul class="uk-nav uk-navbar-dropdown-nav">
-                <!-- <li class="uk-active"><a href="#">Active</a></li> -->
                 <li><a href="#">Notícias</a></li>
                 <li><a href="#">Publicações</a></li>
               </ul>
