--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="margin uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
-  uk-slideshow="animation: fade; max-height: 600; min-height: 500">
+  uk-slideshow="autoplay: true; animation: fade; max-height: 600; min-height: 500">
 
   <ul class="uk-slideshow-items">
     <li>
@@ -31,6 +31,12 @@
   <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
     uk-slideshow-item="next"></a>
 
-  <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
+  <div class="uk-position-bottom-center uk-position-small">
+    <ul class="uk-dotnav">
+      <li uk-slideshow-item="0"><a href="#">Item 1</a></li>
+      <li uk-slideshow-item="1"><a href="#">Item 2</a></li>
+      <li uk-slideshow-item="2"><a href="#">Item 3</a></li>
+    </ul>
+  </div>
 
 </div>
