--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="uk-navbar uk-navbar-container uk-margin uk-hidden@m">
+<nav class="uk-navbar uk-navbar-container uk-margin uk-hidden@m" uk-sticky="bottom: #offset">
   <div class="uk-navbar-left">
     <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
   </div>
@@ -8,7 +8,7 @@
   </div>
 </nav>
 
-<nav class="uk-navbar-container uk-margin-bottom uk-visible@m" uk-navbar>
+<nav class="uk-navbar-container uk-margin-bottom uk-visible@m" uk-navbar uk-sticky="bottom: #offset">
   <div class="uk-navbar-center">
     <div class="uk-navbar-center-left">
       <div>
