added footer [TODO]

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,45 @@
-<p>
-  footer works!
-</p>
+<div class="uk-section">
+  <hr class="uk-divider-icon">
+  <div class="uk-container">
+    <div class="uk-child-width-1-1@m" uk-grid>
+      <div class="uk-flex uk-flex-center uk-flex-middle ">
+        <a href="http://apoema.inf.ufg.br" target="_blank">
+          <img src="../../assets/img/logo.png" style="max-width:15rem">
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer class="page-footer">
+  <div class="uk-container" uk-grid>
+    <div class="uk-width-1-2@m uk-width-1-1@s uk-flex uk-flex-middle uk-text-center uk-margin">
+      <div class="uk-child-width-1-1 uk-flex uk-flex-middle uk-flex-center" uk-grid>
+        <img class="uk-margin-top" src="assets/images/logo-charset.png" style="width: 100px;">
+        <p class="white-text">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2°
+          Andar, Sala 244 - APOEMA</p>
+      </div>
+
+    </div>
+    <div class="uk-width-1-4@m uk-width-1-1@s uk-flex uk-flex-center uk-margin">
+      <div>
+        <h5 class="white-text">Parceiros</h5>
+        <ul class="uk-list">
+          <li>Parceiro 1</li>
+          <li>Parceiro 2</li>
+        </ul>
+      </div>
+
+    </div>
+    <div class="uk-width-1-4@m uk-width-1-1@s uk-flex uk-flex-center uk-margin">
+      <div>
+        <h5 class="white-text">Contato</h5>
+        <ul class="uk-list">
+          <li>qualivida@sseqv.ufg.br</li>
+          <li>(62) 3521-1724</li>
+          <li>(62) 3521-1505</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
