--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -54,19 +54,23 @@
   <div class="uk-offcanvas-bar">
 
     <ul class="uk-nav uk-nav-default">
-      <li class="uk-active"><a href="#">Active</a></li>
+      <li><a href="#">Início</a></li>
       <li class="uk-parent">
-        <a href="#">Parent</a>
+        <a href="#">Atualidades</a>
         <ul class="uk-nav-sub">
-          <li><a href="#">Sub item</a></li>
-          <li><a href="#">Sub item</a></li>
+          <li><a href="#">Notícias</a></li>
+          <li><a href="#">Publicações</a></li>
         </ul>
       </li>
-      <li class="uk-nav-header">Header</li>
-      <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: table"></span> Item</a></li>
-      <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: thumbnails"></span> Item</a></li>
-      <li class="uk-nav-divider"></li>
-      <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: trash"></span> Item</a></li>
+      <li class="uk-parent">
+        <a href="#">Ferramentas</a>
+        <ul class="uk-nav-sub">
+          <li><a href="#">ProjeQtor</a></li>
+          <li><a href="#">GitHub</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Contato</a></li>
+      <li><a href="#">Sobre</a></li>
     </ul>
 
   </div>
