--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,23 +3,23 @@
 
   <ul class="uk-slideshow-items">
     <li>
-      <img src="../../assets/img/image1.png" alt="" uk-cover>
+      <img src="https://getuikit.com/docs/images/light.jpg" alt="" uk-cover>
       <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
         <h3 class="uk-margin-remove">1</h3>
         <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </li>
     <li>
-      <img src="../../assets/img/image1.png" alt="" uk-cover>
+      <img src="https://getuikit.com/docs/images/dark.jpg" alt="" uk-cover>
       <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
         <h3 class="uk-margin-remove">2</h3>
         <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </li>
     <li>
-      <img src="../../assets/img/image1.png" alt="" uk-cover>
+      <img src="https://getuikit.com/docs/images/photo.jpg" alt="" uk-cover>
       <div
-        class="uk-overlay uk-overlay-primary uk-position-right uk-text-center uk-transition-slide-right uk-width-medium">
+        class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
         <h3 class="uk-margin-remove">3</h3>
         <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
@@ -48,15 +48,15 @@
     <h2>Notícias</h2>
     <hr>
 
-    <div uk-slider="center: true">
+    <div uk-slider="autoplay: true; center: true; index: 1">
 
       <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
+        <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="images/photo.jpg" alt="">
+                <img src="https://getuikit.com/docs/images/photo3.jpg" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Headline</h3>
@@ -67,7 +67,7 @@
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="images/dark.jpg" alt="">
+                <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Headline</h3>
@@ -78,29 +78,7 @@
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="images/light.jpg" alt="">
-              </div>
-              <div class="uk-card-body">
-                <h3 class="uk-card-title">Headline</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="uk-card uk-card-default">
-              <div class="uk-card-media-top">
-                <img src="images/photo2.jpg" alt="">
-              </div>
-              <div class="uk-card-body">
-                <h3 class="uk-card-title">Headline</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="uk-card uk-card-default">
-              <div class="uk-card-media-top">
-                <img src="images/photo3.jpg" alt="">
+                <img src="https://getuikit.com/docs/images/light.jpg" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Headline</h3>
@@ -131,15 +109,15 @@
     <h2>Publicações</h2>
     <hr>
 
-    <div uk-slider="center: true">
+    <div uk-slider="autoplay: true; center: true; index: 1">
 
       <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
+        <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="images/photo.jpg" alt="">
+                <img src="https://getuikit.com/docs/images/photo3.jpg" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Headline</h3>
@@ -150,7 +128,7 @@
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="images/dark.jpg" alt="">
+                <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Headline</h3>
@@ -161,29 +139,7 @@
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="images/light.jpg" alt="">
-              </div>
-              <div class="uk-card-body">
-                <h3 class="uk-card-title">Headline</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="uk-card uk-card-default">
-              <div class="uk-card-media-top">
-                <img src="images/photo2.jpg" alt="">
-              </div>
-              <div class="uk-card-body">
-                <h3 class="uk-card-title">Headline</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="uk-card uk-card-default">
-              <div class="uk-card-media-top">
-                <img src="images/photo3.jpg" alt="">
+                <img src="https://getuikit.com/docs/images/light.jpg" alt="">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Headline</h3>
