--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -25,12 +25,12 @@
           <li><a>Ferramentas</a>
             <div uk-dropdown="pos: right-center">
               <ul class="uk-nav uk-dropdown-nav">
-                <li><a href="#">ProjeQtor</a></li>
-                <li><a href="#">GitHub</a></li>
+                <li><a href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
+                <li><a href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
               </ul>
             </div>
           </li>
-          <li><a>Sobre</a></li>
+          <li><a routerLink='/sobre'>Sobre</a></li>
         </ul>
       </div>
       <div>
