consertando links _blank e conteúdo sobre

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -8,21 +8,38 @@
         O presente projeto de pesquisa e desenvolvimento (P&D) tem por objetivo conceber um protótipo de um sistema para
         captação, avaliação, armazenamento e disponibilização de estudos sobre qualidade de vida, devidamente indexados,
         com o propósito de facilitar a localização dos mesmos pelas partes interessadas na incorporação de tecnologias
-        no âmbito do SUS.<br>
-        Para contemplar o objetivo retrocitado, uma série de esforços de pesquisa serão empreendidos no âmbito da
+        no âmbito do SUS.
+      </p>
+      <p>Para contemplar o objetivo retrocitado, uma série de esforços de pesquisa serão empreendidos no âmbito da
         Universidade, de modo a guiar a implementação de ações e desenvolvimento de artefatos e entregáveis
         intermediários e final, a partir dos seguintes objetivos:
-        <br><br>
-        • Pesquisar, planejar e transferir a “prova de conceito” de um Sistema para Socialização do Conhecimento sobre
-        Qualidade de Vida (SSCQV).<br>
-        • Pesquisar, planejar e transferir a documentação sobre o domínio do SSCQV (inclui as regras de negócio).<br>
-        • Pesquisar, planejar e transferir a documentação sobre os requisitos funcionais e de qualidade do SSCQV.<br>
-        • Pesquisar e modelar aplicação para auxiliar nesse domínio.<br>
-        • Pesquisar, planejar e transferir a documentação, contendo a validação da concepção do SSCQV.<br>
-        • Pesquisar, planejar e transferir a documentação, contendo a verificação da viabilidade do SSCQV.<br>
-        <br>
       </p>
+      <ul class="uk-list uk-list-bullet uk-margin-large-left">
+        <li>Pesquisar, planejar e transferir a “prova de conceito” de um Sistema para Socialização do Conhecimento
+          sobre Qualidade de Vida (SSCQV).</li>
+        <li>
+          Pesquisar, planejar e transferir a documentação sobre o domínio do SSCQV (inclui as regras de negócio).
+        </li>
+        <li>
+          Pesquisar, planejar e transferir a documentação sobre os requisitos funcionais e de qualidade do SSCQV.
+        </li>
+        <li>
+          Pesquisar e modelar aplicação para auxiliar nesse domínio.
+        </li>
+        <li>
+          Pesquisar, planejar e transferir a documentação, contendo a validação da concepção do SSCQV.
+        </li>
+        <li>
+          Pesquisar, planejar e transferir a documentação, contendo a verificação da viabilidade do SSCQV.
+        </li>
+      </ul>
     </div>
+  </div>
+</div>
+
+<div class="shadow uk-section duration">
+  <div class="uk-container uk-text-center">
+    <h2>Duração estimada: 16 meses</h2>
   </div>
 </div>
 
@@ -375,12 +392,6 @@
 
   </div>
 
-</div>
-
-<div class="uk-section duration">
-  <div class="uk-container uk-text-center">
-    <h2>Duração estimada: 16 meses</h2>
-  </div>
 </div>
 
 <!--
