--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -64,8 +64,8 @@
       <li class="uk-parent">
         <a href="#">Ferramentas</a>
         <ul class="uk-nav-sub">
-          <li><a href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
-          <li><a href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
+          <li><a target="_blank" href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
+          <li><a target="_blank" href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
         </ul>
       </li>
       <li><a href="#">Contato</a></li>
