--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,8 +3,7 @@
     <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
   </div>
   <div class="uk-navbar-center">
-    <a class="uk-navbar-item uk-logo" href="#"><img src="../../assets/img/logo.png
-          " id="logo"></a>
+    SSEQV
   </div>
 </nav>
 
@@ -13,7 +12,7 @@
   <div class="uk-navbar-left">
 
     <div class="uk-margin-xlarge-left">
-      <a class="uk-navbar-item uk-logo" href="/home"><img src="../../assets/img/logo.png" id="logo"></a>
+      SSEQV
     </div>
 
   </div>
