--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
   </div>
   <div class="uk-navbar-center">
-    SSEQV
+    <a class="uk-navbar-item uk-logo" href="#">SSEQV</a>
   </div>
 </nav>
 
@@ -12,7 +12,7 @@
   <div class="uk-navbar-left">
 
     <div class="uk-margin-xlarge-left">
-      SSEQV
+      <a class="uk-navbar-item uk-logo" href="#">SSEQV</a>
     </div>
 
   </div>
