--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,46 +1,57 @@
 <hr>
-<footer class="page-footer">
+<footer class="page-footer uk-padding">
   <div class="uk-child-width-1-2@m uk-child-width-1-1@s" uk-grid>
-    <div class="uk-flex uk-flex-middle uk-flex-center">
+    <div class="uk-flex uk-flex-around logos-parceiros">
       <div>
-        <img class="uk-align-center" src="assets/img/logo.png" style="width: 300px;">
-        <p align="center" class="white-text">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2°
-          Andar, Sala 244 - APOEMA</p>
+        <img class="apoema" src="assets/img/logo.png">
+      </div>
+      <div>
+        <img class="ms" src="assets/img/logo-ms.png">
+      </div>
+      <div>
+        <img class="fns" src="assets/img/logo-fns.png">
+      </div>
+    </div>
+    
+    <div class="uk-child-width-1-2@m uk-child-width-1-1@s" uk-grid>
+      <div class=" uk-flex uk-flex-center">
+        <div>
+          <h3 class="white-text">Menu</h3>
+          <ul class="uk-list">
+            <li><a>Início</a></li>
+            <li><a>Atualidades</a>
+              <div uk-dropdown="pos: right-center">
+                <ul class="uk-nav uk-dropdown-nav">
+                  <li><a href="#">Notícias</a></li>
+                  <li><a href="#">Publicações</a></li>
+                </ul>
+              </div>
+            </li>
+            <li><a>Ferramentas</a>
+              <div uk-dropdown="pos: right-center">
+                <ul class="uk-nav uk-dropdown-nav">
+                  <li><a href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
+                  <li><a href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
+                </ul>
+              </div>
+            </li>
+            <li><a routerLink='/sobre'>Sobre</a></li>
+          </ul>
+        </div>
+
+      </div>
+      <div class=" uk-flex uk-flex-center">
+        <div>
+            
+          <h3 align="center" class="white-text">Contato</h3>
+          <ul align="center" class="uk-list">
+            <li>qualivida@sseqv.ufg.br</li>
+            <li>(62) 3521-1724</li>
+            <li>(62) 3521-1505</li>
+          </ul>
+        </div>
       </div>
 
-    </div>
-    <div class="uk-child-width-1-2@m uk-child-width-1-1@s uk-flex uk-flex-middle uk-flex-center" uk-grid>
-      <div>
-        <h3 class="white-text">Menu</h3>
-        <ul class="uk-list">
-          <li><a>Início</a></li>
-          <li><a>Atualidades</a>
-            <div uk-dropdown="pos: right-center">
-              <ul class="uk-nav uk-dropdown-nav">
-                <li><a href="#">Notícias</a></li>
-                <li><a href="#">Publicações</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a>Ferramentas</a>
-            <div uk-dropdown="pos: right-center">
-              <ul class="uk-nav uk-dropdown-nav">
-                <li><a href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
-                <li><a href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a routerLink='/sobre'>Sobre</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3 class="white-text">Contato</h3>
-        <ul class="uk-list">
-          <li>qualivida@sseqv.ufg.br</li>
-          <li>(62) 3521-1724</li>
-          <li>(62) 3521-1505</li>
-        </ul>
-      </div>
     </div>
   </div>
 </footer>
