--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,8 +41,7 @@
 
 </div>
 
-
-<div class="uk-section">
+<div id="noticias" class="uk-section">
   <div class="uk-container">
 
     <h2>Notícias</h2>
@@ -103,7 +102,7 @@
 </div>
 
 
-<div class="uk-section">
+<div id="publicacoes" class="uk-section">
   <div class="uk-container">
 
     <h2>Publicações</h2>
@@ -111,17 +110,18 @@
 
     <div uk-slider="autoplay: true; center: true; index: 1">
 
-      <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+      <div class="uk-position-relative uk-visible-toggle" tabindex="-1">
 
         <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="https://getuikit.com/docs/images/photo3.jpg" alt="">
               </div>
               <div class="uk-card-body">
-                <h3 class="uk-card-title">Headline</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <h3 class="uk-card-title">Documentação SSEQV</h3>
+                <p align="center"><span class="uk-label uk-label-danger uk-margin-small-right">PDF</span><a class="uk-button uk-button-text"
+                  href="assets/anexos/Sinopse_ProjetoSSEQV.pdf" download>
+                  Baixar Documentação Completa</a></p>
               </div>
             </div>
           </li>
